dfir_rs/tests/compile-fail-stable/surface_loop_cycle.rs
../compile-fail/surface_loop_cycle.rs